alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  vertical-align: middle !important;
 }
 
 html {
